<resources>
    <string name="app_name">Carolo Farmacêutica</string>
    <string name="txt_username">Introduza o seu username</string>
    <string name="txt_email">Introduza o seu email</string>
    <string name="txt_pass">Introduza a password</string>
    <string name="txt_login">Login</string>
    <string name="txt_registar">Registar</string>
    <string name="txt_credenciais_submit">Por favor preencha as suas credenciais</string>
    <string name="txt_registo_hint">Não tem conta? Registe-se aqui</string>
    <string name="nomeNavHeader">username</string>
    <string name="menuPesquisa">Pesquisa</string>
    <string name="txt_menu_produtos">Produtos</string>
    <string name="txt_menu_localizacao">Localização</string>
    <string name="txt_menu_receita_medica">Receita Médica</string>
    <string name="txt_menu_descontos">Descontos Exclusivos</string>
    <string name="lista_receita_codigo">Código:</string>
    <string name="dosagem">Dosagem:</string>
    <string name="valido">Válido até:</string>
    <string name="email">Email:</string>
    <string name="telefone">Telefone:</string>
    <string name="password">Password:</string>
    <string name="data_fatura">Data de emissão:</string>
    <string name="data">data</string>
    <string name="username">Username:</string>
    <string name="numero_utente">Número de utente</string>
    <string name="nif">Nif</string>
    <string name="morada">Morada</string>
    <string name="buttondesconto">Aplicar</string>
    <string name="desconto">Desconto</string>
    <string name="padraoNumero">1</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="descricao">Descrição</string>
    <string name="data_da_despesa">Data da despesa</string>
    <string name="preco">Preço:</string>
    <string name="nome">Nome:</string>
    <string name="prescicao_medica">Prescrição Médica:</string>
    <string name="quantidade">Quantidade:</string>
    <string name="categoria">Categoria:</string>
    <string name="iva">IVA:</string>
    <string name="despesas">Despesas</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="receita_medica">Receita Médica</string>
    <string name="btn_registar">Registar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tvnomeMedicamento">Nome:</string>
    <string name="tv_prescricao">Prescrição Médica:</string>
    <string name="tvpreco">Preço:</string>
    <string name="tvquantidade">Quantidade: </string>
    <string name="tvcategoria">Categoria:</string>
    <string name="tviva">IVA:</string>
    <string name="TxtCarrinhocheckout">Checkout</string>
    <string name="TxtLocal_prescricao">Local Prescrição</string>
    <string name="Txt_Medico_prescricao">Médico Prescrição</string>
    <string name="txt_valido">Válido:</string>
    <string name="txt_posologia">Posologia:</string>
    <string name="quantidade_carrinho">Quantidade a adicionar ao carrinho:\n</string>
    <string name="definicoes">Definições:</string>
    <string name="settings">Escreva o IP: </string>
    <string name="mudar_ip">Mudar IP</string>
    <string name="ip">Escreva o ip</string>
    <string name="inserir_ip">Insere o IP :</string>
    <string name="exemplo_ip">ex.:, 192.168.1.1</string>
    <string name="carrinho_icon">Carrinho</string>
    <string name="txt_menu_carrinho">Carrinho</string>
    <string name="adicionar_carrinho">Adicionar Carrinho</string>
    <string name="logo_farmaceutica">Logo Farmaceutica</string>
    <string name="vai_atras">Vai_Atras</string>
    <string name="imagem_produto">Imagem Produto</string>
    <string name="remove_produto_do_carrinho">Remove produto do carrinho</string>
    <string name="reduz_quantidade_do_produto">Reduz quantidade do produto</string>
    <string name="adicionar_quantidade_ao_produto">Adicionar quantidade ao produto</string>
    <string name="imagem_medicamento_desconto">Imagem Medicamento desconto</string>
    <string name="imagem_medicamento">Imagem Medicamento</string>
    <string name="imagem_receita">Imagem Receita</string>
    <string name="imagem_user">Imagem User</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="remover">Remover</string>
    <string name="guardar_receita">Guardar Receita</string>
    <string name="logout">Logout</string>
    <string name="faturas">Faturas:</string>
    <string name="txt_valor_total">Valor Total:</string>
    <string name="txt_nr_fatura">Número da Fatura:</string>
    <string name="txt_imagem_fatura">Imagem Fatura</string>
    <string name="txt_preco_unitario">Preço Unitário:</string>
    <string name="txt_valor_com_iva">Valor com IVA:</string>
    <string name="txt_subtotal">Subtotal:</string>
    <string name="txt_nome_do_produto">Nome do Produto:</string>
    <string name="txt_saude_oral">Saúde Oral</string>
    <string name="txt_bens_beleza">Bens de Beleza</string>
    <string name="txt_higiene">Higiene</string>
    <string name="txt_nUtente">Introduza o número de utente</string>
    <string name="txt_nif">Introduza o número de contribuinte</string>
    <string name="txt_morada">Introduza a morada</string>
    <string name="txt_telefone">Introduza o número de telefone</string>
    <string name="txt_quantidade_add_check">Não é possível aumentar mais a quantidade!</string>
    <string name="txt_quantidade_reduce_check">Não é possível reduzir mais a quantidade!</string>
    <string name="txt_remover_sucesso">O produto foi removido do carrinho de compras!</string>
    <string name="text_remover_fail">Não foi possível remover o produto do carrinho de compras!</string>
    <string name="txt_sem_conexao">Não tem ligação à internet! Verifique se está conectado.</string>
    <string name="txt_erro_registar">Erro ao registar!</string>
    <string name="txt_erro_dados">Erro ao processar os dados!</string>
    <string name="txt_erro_auth">Erro na autenticação!</string>
    <string name="txt_erro_medicamentos">Erro ao obter os medicamentos!</string>
    <string name="txt_erro_receitaMedica">Erro ao obter a sua(s) receitas médicas!</string>
    <string name="txt_carrinho_vazio">Sem produtos no carrinho!</string>
    <string name="txt_adicionar_produto_carrinho">Erro ao adicionar o produto ao carrinho!</string>
    <string name="txt_erro_atualizar_quantidade_linha">Ocorreu um erro ao atualizar a quantidade do produto!</string>
    <string name="txt_erro_remover_linha">Erro ao remover o produto!</string>
    <string name="txt_erro_subtotal">Erro ao obter o subtotal!</string>
    <string name="txt_erro_fatura">Erro ao obter a sua(s) faturas.</string>
    <string name="txt_erro_linhas_fatura">Erro ao obter linhas da fatura.</string>
    <string name="txt_erro_checkout">Erro no checkout!</string>
    <string name="txt_produto_adicionado_carrinho">Produto adicionado ao carrinho com sucesso!</string>
    <string name="txt_quantidade_0">A quantidade não pode ser igual ou inferior a 0!</string>
    <string name="txt_compra_sucesso">Compra efetuada com sucesso!</string>
    <string name="txt_confirmar_compra">Confirmação de Compra</string>
    <string name="txt_confirmacao_compra">Deseja confirmar a compra?</string>
    <string name="txt_titulo_higiene">higiene</string>
    <string name="txt_titulo_bens_beleza">bens_beleza</string>
    <string name="txt_titulo_saude_oral">saude_oral</string>
    <string name="txt_ip_alterado">IP alterado com sucesso!</string>
    <string name="text_numero_cartao">Número do Cartão</string>
    <string name="txt_data_validade_cartao">Data de Validade</string>
    <string name="txt_cvv_cartao">CVV</string>
    <string name="text_entidade">Entidade: 1234</string>
    <string name="txt_referencia">Referência: 123456789</string>
    <string name="txt_botao_cartao">Pagar com Cartão de Crédito</string>
    <string name="txt_botao_multibanco">Pagar com Multibanco</string>
    <string name="txt_dados_cartao_vazios">Preencha todos os campos do cartão de crédito!</string>
    <string name="txt_metodo_pagamento_vazio">Escolha um método de pagamento!</string>
    <string name="txt_preencha_campos">Preencha todos os campos!</string>
    <string name="txt_registo_sucesso">Registo efetuado com sucesso!</string>
    <string name="text_sem_faturas">O cliente não tem faturas!</string>
    <string name="txt_cliente_sem_receita">O cliente não tem receitas médicas!</string>
</resources>