<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPagamento"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtNumeroCartao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/text_numero_cartao"
        android:inputType="number"
        android:maxLength="16"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edtDataValidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/txt_data_validade_cartao"
        android:inputType="date"
        android:maxLength="5"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/etCVV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/txt_cvv_cartao"
        android:inputType="number"
        android:maxLength="3"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvEntidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_entidade"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvReferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_referencia"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvValorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_valor_total"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnCartaoCredito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_botao_cartao" />

    <Button
        android:id="@+id/btnMultibanco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_botao_multibanco" />

</LinearLayout>
