<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/inserir_ip" />

    <EditText
        android:id="@+id/etIp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvIp"
        android:inputType="text"
        android:hint="@string/exemplo_ip"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btMudarIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etIp"
        android:text="@string/mudar_ip" />

</RelativeLayout>